<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group
		android:id="@+id/languagesGroup">
		<item
			android:id="@+id/nav_schedules"
			android:checkable="true"
			android:icon="@drawable/ic_courses"
			android:title="@string/courses"/>
		<item
			android:id="@+id/nav_languages"
			android:checkable="true"
			android:icon="@drawable/ic_list"
			android:title="@string/languages"/>
	</group>
	<group
		android:id="@+id/actionsGroup">
		<item
			android:id="@+id/nav_settings"
			android:checkable="true"
			android:icon="@drawable/ic_settings"
			android:title="@string/settings"/>
		<item
			android:id="@+id/nav_import"
			android:checkable="true"
			android:icon="@drawable/ic_import"
			android:title="@string/import_language_pack"/>
	</group>
</menu>