<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="4dp"
	android:clickable="true"
	android:focusable="true">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:foreground="@drawable/language_list"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/flagImageView"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:layout_gravity="center"
			android:contentDescription="@string/language_flag"
			android:scaleType="fitXY"
			tools:src="@drawable/flag_french"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:background="@color/colorBackgroundDark"
			android:orientation="vertical"
			android:padding="3dp">

			<TextView
				android:id="@+id/languageLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:textSize="14sp"
				android:textStyle="bold"
				android:textColor="@color/colorTextDark"
				tools:text="Arabic (Egyptian)"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="4dp"
					android:textColor="@color/colorTextLight"
					android:text="@string/packs"
					android:textSize="12sp"/>

				<TextView
					android:id="@+id/numPacksLabel"
					android:layout_width="wrap_content"
					android:textColor="@color/colorTextLight"
					android:layout_height="wrap_content"
					android:textSize="12sp"
					tools:text="3"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:textColor="@color/colorTextLight"
					android:layout_height="wrap_content"
					android:layout_marginEnd="4dp"
					android:text="@string/sentenceGroups"
					android:textSize="12sp"/>

				<TextView
					android:id="@+id/numSentencesLabel"
					android:layout_width="wrap_content"
					android:textColor="@color/colorTextLight"
					android:layout_height="wrap_content"
					android:textSize="12sp"
					tools:text="4000"/>

			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</android.support.v7.widget.CardView>