<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">

	<LinearLayout
		android:gravity="center"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/languageCodeLabel"
				android:layout_height="wrap_content"
				android:layout_width="40dp"
				android:textAlignment="textEnd"
				android:textColor="@color/colorTextDark"
				android:textSize="12sp"
				tools:text="EN"/>

			<TextView
				android:id="@+id/sentenceLabel"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:padding="4dp"
				android:textColor="@color/colorTextDark"
				android:textSize="12sp"
				tools:text="Look, there's my friend! But why is my friend at school and not with me?"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/alternateSentenceLayout"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="40dp"
				android:text="@string/alt"
				android:textAlignment="textEnd"
				android:textColor="@color/colorTextDark"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/alternateSentenceLabel"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:padding="4dp"
				android:textColor="@color/colorTextDark"
				android:textSize="12sp"
				tools:text="Look, there's my friend! But why is my friend at school and not with me?"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/romanizationLayout"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="40dp"
				android:text="@string/rom"
				android:textAlignment="textEnd"
				android:textColor="@color/colorTextDark"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/romanizationLabel"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:padding="4dp"
				android:textColor="@color/colorTextDark"
				android:textSize="12sp"
				tools:text="Look, there's my friend! But why is my friend at school and not with me?"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/ipaLayout"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="40dp"
				android:text="@string/ipa"
				android:textAlignment="textEnd"
				android:textColor="@color/colorTextDark"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/ipaLabel"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:padding="4dp"
				android:textColor="@color/colorTextDark"
				android:textSize="12sp"
				tools:text="Look, there's my friend! But why is my friend at school and not with me?"/>
		</LinearLayout>
	</LinearLayout>

	<View
		android:id="@+id/divider"
		android:background="@color/colorTextLight"
		android:layout_height="1dp"
		android:layout_margin="4dp"
		android:layout_width="match_parent"/>

</LinearLayout>