<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="4dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="30dp"
		android:background="@drawable/sentence_list_border"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical"
			android:padding="3dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/languageCodeLabel"
					android:layout_width="40dp"
					android:layout_height="wrap_content"
					android:textAlignment="textEnd"
					android:textColor="@color/colorTextDark"
					android:textSize="12sp"
					tools:text="EN"/>

				<TextView
					android:id="@+id/sentenceLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="4dp"
					android:textColor="@color/colorTextDark"
					android:textSize="12sp"
					tools:text="Look, there's my friend! But why is my friend at school and not with me?"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/alternateSentenceLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="40dp"
					android:layout_height="wrap_content"
					android:textAlignment="textEnd"
					android:textColor="@color/colorTextDark"
					android:textSize="12sp"
					android:text="@string/alt"/>

				<TextView
					android:id="@+id/alternateSentenceLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="4dp"
					android:textColor="@color/colorTextDark"
					android:textSize="12sp"
					tools:text="Look, there's my friend! But why is my friend at school and not with me?"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/romanizationLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="40dp"
					android:layout_height="wrap_content"
					android:textAlignment="textEnd"
					android:textColor="@color/colorTextDark"
					android:textSize="12sp"
					android:text="@string/rom"/>

				<TextView
					android:id="@+id/romanizationLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="4dp"
					android:textColor="@color/colorTextDark"
					android:textSize="12sp"
					tools:text="Look, there's my friend! But why is my friend at school and not with me?"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/ipaLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="40dp"
					android:layout_height="wrap_content"
					android:text="@string/ipa"
					android:textAlignment="textEnd"
					android:textColor="@color/colorTextDark"
					android:textSize="12sp"/>

				<TextView
					android:id="@+id/ipaLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="4dp"
					android:textColor="@color/colorTextDark"
					android:textSize="12sp"
					tools:text="Look, there's my friend! But why is my friend at school and not with me?"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

	<TextView
		android:id="@+id/indexLabel"
		android:layout_width="50dp"
		android:layout_height="wrap_content"
		android:background="@drawable/sentence_number_background"
		android:padding="2dp"
		android:textAlignment="center"
		android:textColor="@color/colorTextWhite"
		android:textStyle="bold"
		tools:text="2999"/>

</RelativeLayout>